--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@titicaca/eslint-config-triple": "^3.1.0",
+    "eslint": "^8.18.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-promise": "^6.0.0"
   },
   "browserslist": {
