--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -26,8 +27,6 @@
   },
   "devDependencies": {
     "@titicaca/eslint-config-triple": "^3.1.0",
-    "eslint": "^8.18.0",
-    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-promise": "^6.0.0"
   },
   "browserslist": {
