--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,7 +31,8 @@
   "devDependencies": {
     "@titicaca/eslint-config-triple": "^3.1.0",
     "eslint": "^8.18.0",
-    "eslint-plugin-react": "^7.30.0"
+    "eslint-plugin-react": "^7.30.0",
+    "webpack-cli": "^4.10.0"
   },
   "browserslist": {
     "production": [
