--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "lodash": "^4.17.21",
@@ -23,15 +22,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:es": "eslint '**/*.{js,ts,tsx}'",
+    "lint:es": "eslint src",
     "lint:es:fix": "npm run lint:es -- --fix",
     "lint:etc": "prettier '**/*.{json,yaml,md}' --check",
     "lint:etc:fix": "prettier '**/*.{json,yaml,md}' --write"
   },
   "devDependencies": {
     "@titicaca/eslint-config-triple": "^3.1.0",
-    "eslint": "^8.18.0",
-    "eslint-plugin-react": "^7.30.0"
+    "eslint": "^8.18.0"
   },
   "browserslist": {
     "production": [
