--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "prettier": "^2.7.1",
@@ -24,13 +23,22 @@
     "lint:etc:fix": "prettier '**/*.{json,yaml,md}' --write"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@testing-library/jest-dom": "^5.16.4",
     "@titicaca/eslint-config-triple": "^3.1.0",
+    "babel-jest": "^28.1.1",
+    "babel-plugin-transform-require-context": "^0.1.1",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.1",
+    "jest-styled-components": "^7.0.8",
+    "react-test-renderer": "^18.2.0",
+    "require-context.macro": "^1.2.2"
   },
   "browserslist": {
     "production": [
